change worker instance type

--- a/product/config-map-aws-auth_gdx-cluster-prod.yaml
+++ b/product/config-map-aws-auth_gdx-cluster-prod.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: kube-system
 data:
   mapRoles: |
+    - rolearn: arn:aws:iam::659905521232:role/gdx-cluster-prod20181124073211189300000002
+      username: system:node:{{EC2PrivateDNSName}}
+      groups:
+        - system:bootstrappers
+        - system:nodes
 
 
   mapUsers: |
