--- a/product/yaml/nginx-service.yaml
+++ b/product/yaml/nginx-service.yaml
@@ -7,6 +7,8 @@ spec:
   selector:
     app: nginx
   ports:
-  - protocol: TCP
+  - name: http
     port: 80
+    protocol: TCP
     targetPort: 80
+    nodePort: 30000
